# fitness-tracker

./: .gitignore  CLAUDE.md  README.md  plan.md
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh
backend/migrations/: 001_create_users.sql  002_create_exercise_templates.sql  003_create_workout_templates.sql  004_create_workouts.sql  005_create_body_measurements.sql  006_create_body_stats_goals.sql  007_create_personal_records.sql  008_create_user_settings.sql  009_seed_default_exercises.sql  010_add_superset_support.sql  011_add_plate_calculator_settings.sql  012_create_workout_programs.sql  013_add_rpe_to_sets.sql  014_add_composite_indexes.sql  015_add_workout_tags.sql  016_add_compact_mode.sql  018_soft_delete_workouts_templates.sql  019_add_cardio_fields.sql  020_add_more_exercises.sql  021_add_more_exercises_data.sql  022_add_carry_category.sql  023_seed_carry_exercises.sql  024_add_timed_category.sql  025_seed_timed_exercises.sql  026_add_target_distance_duration.sql
backend/src/: cache.rs  cursor.rs  etag.rs  lib.rs  main.rs  openapi.rs
backend/src/config/: mod.rs  settings.rs
backend/src/db/: pool.rs
backend/src/dto/: admin.rs  auth.rs  body_stats.rs  exercise.rs  mod.rs  program.rs  settings.rs  statistics.rs  template.rs  workout.rs
backend/src/error/: app_error.rs
backend/src/handlers/: admin.rs  auth.rs  body_stats.rs  exercise.rs  health.rs  mod.rs  program.rs  settings.rs  statistics.rs  template.rs  workout.rs
backend/src/middleware/: admin.rs  auth.rs  mod.rs  (+2 more)
backend/tests/: auth_test.rs  workout_test.rs
(+197 files in other folders)
